// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MetricCard > 危険時のスナップショットと一致する 1`] = `
<div>
  <div
    class="group/card flex flex-col overflow-hidden rounded-xl py-(--card-spacing) text-sm text-card-foreground ring-1 ring-foreground/10 [--card-spacing:--spacing(4)] has-data-[slot=card-footer]:pb-0 has-[>img:first-child]:pt-0 data-[size=sm]:[--card-spacing:--spacing(3)] data-[size=sm]:has-data-[slot=card-footer]:pb-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl gap-3 transition-colors duration-200 border-destructive/60 bg-destructive/5"
    data-size="default"
    data-slot="card"
    data-status="critical"
  >
    <div
      class="group/card-header @container/card-header auto-rows-min gap-1 rounded-t-xl px-(--card-spacing) has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-(--card-spacing) flex flex-row items-center justify-between space-y-0"
      data-slot="card-header"
    >
      <div
        class="font-heading group-data-[size=sm]/card:text-sm text-sm font-medium text-muted-foreground"
        data-slot="card-title"
      >
        モーター温度
      </div>
      <span
        class="group/badge inline-flex h-5 w-fit shrink-0 items-center justify-center overflow-hidden rounded-4xl border px-2 py-0.5 text-xs whitespace-nowrap focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&>svg]:pointer-events-none [&>svg]:size-3! [a]:hover:bg-primary/80 gap-1 font-medium border-transparent bg-destructive/15 text-destructive [a&]:hover:bg-destructive/25 transition-colors"
        data-slot="badge"
        data-variant="default"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-octagon-alert size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 16h.01"
          />
          <path
            d="M12 8v4"
          />
          <path
            d="M15.312 2a2 2 0 0 1 1.414.586l4.688 4.688A2 2 0 0 1 22 8.688v6.624a2 2 0 0 1-.586 1.414l-4.688 4.688a2 2 0 0 1-1.414.586H8.688a2 2 0 0 1-1.414-.586l-4.688-4.688A2 2 0 0 1 2 15.312V8.688a2 2 0 0 1 .586-1.414l4.688-4.688A2 2 0 0 1 8.688 2z"
          />
        </svg>
        危険
      </span>
    </div>
    <div
      class="px-(--card-spacing)"
      data-slot="card-content"
    >
      <p
        class="flex items-baseline gap-1.5"
      >
        <span
          class="font-mono text-3xl font-semibold tabular-nums tracking-tight text-destructive"
        >
          92.1
        </span>
        <span
          class="text-sm text-muted-foreground"
        >
          °C
        </span>
      </p>
      <dl
        class="mt-3 grid grid-cols-3 gap-2 border-t border-border pt-3 font-mono text-xs tabular-nums"
      >
        <div>
          <dt
            class="text-muted-foreground"
          >
            最小
          </dt>
          <dd>
            45.1
          </dd>
        </div>
        <div>
          <dt
            class="text-muted-foreground"
          >
            平均
          </dt>
          <dd>
            70.2
          </dd>
        </div>
        <div>
          <dt
            class="text-muted-foreground"
          >
            最大
          </dt>
          <dd>
            92.1
          </dd>
        </div>
      </dl>
    </div>
  </div>
</div>
`;

exports[`MetricCard > 通常時のスナップショットと一致する 1`] = `
<div>
  <div
    class="group/card flex flex-col overflow-hidden rounded-xl bg-card py-(--card-spacing) text-sm text-card-foreground ring-1 ring-foreground/10 [--card-spacing:--spacing(4)] has-data-[slot=card-footer]:pb-0 has-[>img:first-child]:pt-0 data-[size=sm]:[--card-spacing:--spacing(3)] data-[size=sm]:has-data-[slot=card-footer]:pb-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl gap-3 transition-colors duration-200"
    data-size="default"
    data-slot="card"
    data-status="normal"
  >
    <div
      class="group/card-header @container/card-header auto-rows-min gap-1 rounded-t-xl px-(--card-spacing) has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-(--card-spacing) flex flex-row items-center justify-between space-y-0"
      data-slot="card-header"
    >
      <div
        class="font-heading group-data-[size=sm]/card:text-sm text-sm font-medium text-muted-foreground"
        data-slot="card-title"
      >
        モーター温度
      </div>
      <span
        class="group/badge inline-flex h-5 w-fit shrink-0 items-center justify-center overflow-hidden rounded-4xl border px-2 py-0.5 text-xs whitespace-nowrap focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&>svg]:pointer-events-none [&>svg]:size-3! [a]:hover:bg-primary/80 gap-1 font-medium border-transparent bg-chart-3/15 text-chart-3 [a&]:hover:bg-chart-3/25 transition-colors"
        data-slot="badge"
        data-variant="default"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-check size-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m9 12 2 2 4-4"
          />
        </svg>
        正常
      </span>
    </div>
    <div
      class="px-(--card-spacing)"
      data-slot="card-content"
    >
      <p
        class="flex items-baseline gap-1.5"
      >
        <span
          class="font-mono text-3xl font-semibold tabular-nums tracking-tight"
        >
          62.3
        </span>
        <span
          class="text-sm text-muted-foreground"
        >
          °C
        </span>
      </p>
      <dl
        class="mt-3 grid grid-cols-3 gap-2 border-t border-border pt-3 font-mono text-xs tabular-nums"
      >
        <div>
          <dt
            class="text-muted-foreground"
          >
            最小
          </dt>
          <dd>
            45.1
          </dd>
        </div>
        <div>
          <dt
            class="text-muted-foreground"
          >
            平均
          </dt>
          <dd>
            55.5
          </dd>
        </div>
        <div>
          <dt
            class="text-muted-foreground"
          >
            最大
          </dt>
          <dd>
            65.7
          </dd>
        </div>
      </dl>
    </div>
  </div>
</div>
`;
